# AGENT

./: .dockerignore  .env.example  .gitignore  CLAUDE_CODE_PARITY.md  README.md  SPRINT-OPENCODE-PARITY.md  claude.md  docker-compose.yml  package.json  start.ps1  stop.ps1
apps/agent/: .env.example  CHANGELOG_KIMI.md  CHANGELOG_OPENROUTER.md  Dockerfile  KIMI.md  Makefile  OPENROUTER.md  README.md  coverage.xml  pyproject.toml  requirements.txt  test_kimi.py  test_openrouter.py
apps/agent/ag3nt_agent/: __init__.py  agent_config.py  agent_pool.py  apply_patch_tool.py  artifact_store.py  audit_logger.py  batch_tool.py  browser_bridge.py  browser_tool.py  codebase_search.py  compaction_middleware.py  context_blueprint.py  context_engine_client.py  context_gatherer.py  context_summarization.py  deep_reasoning.py  deepagents_runtime.py  embedding_cache.py  errors.py  exec_approval.py  exec_tool.py  external_path_tool.py  file_security.py  file_tracker.py  file_watcher.py  fuzzy_edit.py  git_tool.py  glob_tool.py  grep_tool.py  interactive_tools.py  lint_runner.py  memory_flush.py  memory_search.py  memory_summarizer.py  model_config.py  multi_edit_tool.py  node_action_tool.py  notebook_tool.py  observation_masking.py  output_truncation.py  (+27 more)
apps/agent/ag3nt_agent/autonomous/: __init__.py  decision_engine.py  event_bus.py  goal_manager.py  learning_engine.py
apps/agent/ag3nt_agent/lsp/: __init__.py  client.py  servers.py  tool.py
apps/agent/tests/: __init__.py  conftest.py
apps/agent/tests/unit/: test_agent_config.py  test_agent_pool.py  test_audit_logger.py  test_batch_tool.py  test_browser_tool.py  test_context_blueprint.py  test_context_engine_client.py  test_context_gatherer.py  test_context_summarization.py  test_decision_engine.py  test_deep_reasoning.py  test_errors.py  (+44 more)
(+336 files in other folders)
